--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,9 +28,14 @@
                 <div class="post w-1/3 p-4 mb-3 rounded-md border-2 border-zinc-700 bg-800">
                     <h4 class="text-blue-500 mb-2">@<%= user.username%></h4>
                     <p class="text-sm tracking-tight"><%= post.content %></p>
+                    <small class="mt-2 inline-block "><%=post.likes.length%></small>
                     <div class="btns flex gap-4">
-                        <a class="text-blue-500" href="">Like</a>
-                        <a class="text-zinc-600" href="">edit</a>
+                        <a class="text-blue-500" href="/like/<%= post._id%>">
+                            <%= post.likes.indexOf(user._id)=== -1? "like" : "unlike" %>   </a>
+                        <a class="text-zinc-600" href="/edit/<%= post._id%>">edit</a>
+                        <div class="w-full flex justify-end">
+                        <a class="text-zinc-600  justify-end" href="/delete/<%= post._id%>">delete</a>
+                        </div>
                     </div>
                     
                 </div>
