--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body> 
-    <div class="w-full min-h-screen bg-zinc-900 text-white p-10">
+    <div class="w-full min-h-screen bg-slate-900 text-white p-10">
         <div class="w-full flex justify-end">
             <a class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/logout">Logout</a>
         </div>
