Minor final commit

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,7 +14,7 @@
         <div class="w-full flex justify-end">
             <a class="bg-red-500 rounded-md px-3 py-2 text-sm mb-5 inline-block" href="/logout">Logout</a>
         </div>
-        <h3 class="text-3xl mb-5"><span class="font-light">Hello, <%=user.name%></span></h3>
+        <h3 class="text-3xl mb-5"><span class="font-light">Hello, <%=user.username%></span></h3>
         <h5> yoy can create a new post.</h5>
         <form method="post" action="/post">
             <textarea placeholder="write your content"
