--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,8 +11,8 @@
     <div class="w-full min-h-screen bg-slate-900 text-white p-10 ">
     <h3 class="text-3xl mb-5">Login your Account</h3>
     <form class="flex flex-col w-1/3 " action="/login" method="post">
-        <input class ="px-3 py-2 m-1 outline-none rounded-md" type="password" placeholder="password" name="password">
-        <input class ="px-3 py-2 m-1 outline-none rounded-md"type="email" placeholder="email" name="email">
+        <input class ="px-3 py-2 m-1 text-black outline-none rounded-md" type="password" placeholder="password" name="password">
+        <input class ="px-3 py-2 m-1 text-black outline-none rounded-md"type="email" placeholder="email" name="email">
         <input class ="px-3 py-2 m-1 bg-blue-500 rounded-md" type="submit" value="Login">
     </form>
 </div>
