--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,9 +14,9 @@
         <h3 class="text-3xl mb-5">Create Account</h3>
         <form class="flex flex-col w-1/3" action="/register" method="post">
 
-            <input class="px-3 py-2 m-1 rounded-md" type="text" placeholder="username" name="username">
-            <input class="px-3 py-2 m-1 rounded-md" type="password" placeholder="password" name="password">
-            <input class="px-3 py-2 m-1 rounded-md" type="email" placeholder="email" name="email">
+            <input class="px-3 py-2 m-1 text-black  rounded-md" type="text" placeholder="username" name="username">
+            <input class="px-3 py-2 m-1 text-black rounded-md" type="password" placeholder="password" name="password">
+            <input class="px-3 py-2 m-1 text-black rounded-md" type="email" placeholder="email" name="email">
             <input class="px-3 py-2 m-1 bg-blue-500 rounded-md" type="submit" value="Create Account">
         </form>
     </div>
